# MLOps_Term8_Project

./: .gitignore  README.md  eval_results.jsonl  requirements.txt
Agent/: .env.example  README.md  TestQuestions.txt  agent_service_evals.py  architecture.md  eval_report_1776780007.json  eval_report_1776931207.json  eval_results.jsonl  hey guys.txt  main.py  pyproject.toml  run_eval.py
Agent/chatbot_eval/: eval_dataset sample.json  eval_dataset.json  eval_results.jsonl  rag_eval_results.jsonl  rag_service_evals.py  test_eval_laminar.py
Agent/chroma_store/: chroma.sqlite3
Agent/edimension_agent/: __init__.py  agent_service.py  app.py  config.py  crypto.py  db.py  eval.py  otp_broker.py  rag_observability.py  rag_service.py  server.py
Agent/edimension_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Agent/edimension_agent/telegram/: __init__.py  __main__.py  bot.py
Agent/evals/: agent_service_evals.py  lmnr_integration.py
RAG_Chatbot/: RAG_Document_Reader.ipynb  app.py  eval.py  eval_dataset.json  rag.py  requirements.txt  run_eval.py
RAG_Chatbot/frontend/: index.html
chroma_store/: chroma.sqlite3
